Add TODOs and more swaggerdoc details. Make PUT method return 204 and no response body.
